--- a/SampleApplication/SampleApplication/SampleApplication-Info.plist
+++ b/SampleApplication/SampleApplication/SampleApplication-Info.plist
@@ -26,9 +26,9 @@
 	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2012 cundd. All rights reserved.</string>
-	<key>NSPrincipalClass</key>
-	<string>CDApplication</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
+	<key>NSPrincipalClass</key>
+	<string>NSApplication</string>
 </dict>
 </plist>
