--- a/SampleApplication/SampleApplication/SampleApplication-Info.plist
+++ b/SampleApplication/SampleApplication/SampleApplication-Info.plist
@@ -30,5 +30,7 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>QoqPrincipalClass</key>
+	<string>SampleApplication\Controller\StandardController</string>
 </dict>
 </plist>
